[package]
name = "rupert"
version = "0.0.1"
authors = ["Aaron Tomb <aarontomb@gmail.com>"]

[dev-dependencies]
quickcheck = "0.2"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
